# OperatingSystemsLabs

./: README.md
laba2/: CMakeLists.txt  main.c
